Archive2/3d/7080dbd815360c/output
kill: Operation not permitted
kill: Operation not permitted
kill: Operation not permitted
main.cpp: In function ‘int main()’:
main.cpp:63:8: error: ‘void Event<TOwner, Tn>::operator()(TArgn&& ...) [with TArgn = {int}; TOwner = Arf; Tn = {int}]’ is private
   void operator( )( TArgn&&... argn ) {
        ^
main.cpp:120:23: error: within this context
     a.Woof( 0xBADCA11 ); 
                       ^
